# PyFocus

./: LICENCE.txt  MANIFEST  No_mask.py  README.md  SPP.py  User interfase features.txt  VPP mask simulation 1 parameters.txt  VPP.py  __init__.py  borrador.txt  complex_quadrature.py  complex_quadrature_2D.py  custom run.py  custom_mask.py  custom_run.py  examples.py  front_end.ui  front_end_ui.py  interphase.py  main.py  maskfunction_goes_here.py  new_test_algo.py  old_test_pyfocus.py  plot polarization near center.py  plot.py  plot_esp.py  plot_polarization_elipses.py  read me.txt  requirements.txt  setup.cfg  setup.py  sim.py  test_algo.py  test_pyfocus.py  tipical custom mask simulations.py  trapezoid2D_integration_functions.py  trapezoid2D_with_interphase_integration_functions.py  user_interface.py
src/: MANIFEST  log_config.py  setup.cfg  setup.py  test_pyfocus.py
src/PyCustomFocus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PyFocus/: __init__.py  plot.py  sim.py
src/PyFocus/equations/: coordinate_change.py  no_phase_mask.py  radial_simmetry.py  vortex_phase_mask.py
src/PyFocus/napari_adapter/: napari_adapter.py
src/PyFocus/plot_functions/: plot_at_focus.py  plot_at_focus_3D.py  plot_polarization_elipses.py
src/PyFocus/user_interface/: front_end_ui.py
src/custom_dataclasses/: field_parameters.py  interface_parameters.py  mask.py
src/custom_typing/: __init__.py
src/dataclass/: mask.py
src/equations/: complex_quadrature.py  gaussian_profile.py  no_phase_mask.py  radial_simmetry.py  vortex_phase_mask.py
src/model/: main_calculation_handler.py
src/model/default_masks/: main_handler.py
src/model/focus_field_calculators/: base.py  custom_mask.py  no_mask.py  vortex_mask.py  (+1 more)
src/napari_adapter/: napari_adapter.py
src/plot/: plot_polarization_elipses.py
src/plot_functions/: __init__.py  plot_at_focus.py  plot_at_focus_3D.py
(+166 files in other folders)
