[metadata]
name = PyCustomFocus
version = 3.3.3
author = Caprile Fernando
author_email = fcaprile@gmail.com
description = Full vectorial calculation of focused electromagnetic fields moduled by a custom phase mask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fcaprile/PyFocus
classifiers =
    Development Status :: 3 - Alpha      
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License   
    Programming Language :: Python :: 3.9
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src