[metadata]
name = PyCustomFocus

author = Caprile Fernando
author_email = fcaprile@gmail.com
url = https://github.com/fcaprile/PyFocus
license = MIT
description = Full vectorial calculation of focused electromagnetic fields moduled by a custom phase mask
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pyqt5

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

